# awtrix-python-integrations

./: .env.example  .gitignore  README.md  config.json  main.py  plugin_base.py  pyproject.toml
docs/: awtrix-api-relevant.md
plugins/: pomodoro_plugin.py  weather_plugin.py  youtube_plugin.py
scripts/: build_macos_app.sh  generate_icon.py
