[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awtrix"
version = "0.1.0"
description = "A modular Python framework for integrating and displaying data from various sources (like weather, YouTube, and productivity tools) on AWTRIX smart clocks using custom plugins."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.3.0",
    "pystray>=0.19.5",
    "requests>=2.32.4",
]

[tool.uv]
managed = true

[tool.setuptools]
packages = []
py-modules = ["main", "plugin_base"]
